yiltc/testsuite/negative/annotated_type_mismatch.yilt
// Testing type-annotated let binding mismatch.
fn bad()
    let x int = "wrong"
